Import module code (adapted from drawPoker module)

--- a/demo/makefile.t3m
+++ b/demo/makefile.t3m
@@ -1,8 +1,10 @@
 -D LANGUAGE=en_us
 -D MESSAGESTYLE=neu
 -Fy obj -Fo obj
+-Fs ../..
 -o games/game.t3
 -lib system
 -lib adv3/adv3
+-lib syslog/syslog
 -lib ../playingCards
 -source src/sample.t
